--- a/src/app/documents/bundle-einfuehrung-und-benutzungsanweisung.html
+++ b/src/app/documents/bundle-einfuehrung-und-benutzungsanweisung.html
@@ -1,7 +1,7 @@
 <cb-header>Bundle: Einführung & Benutzungsanweisung</cb-header>
 
 
-<cb-chapter [ordinal]="1">Installation</cb-chapter>
+<cb-chapter ordinal="1">Installation</cb-chapter>
 
 <ol>
   <li>Erstelle in deinem Homeverzeichnis einen neuen Ordner, z. B. <cb-code color="blue">H:\Dokumente\Cranberri</cb-code>.</li>
@@ -9,37 +9,37 @@
 </ol>
 
 
-<cb-chapter [ordinal]="2">Cranberri starten</cb-chapter>
+<cb-chapter ordinal="2">Cranberri starten</cb-chapter>
 
 <ol>
-  <li>Doppelklicke auf die Verknüpfung <cb-code color="blue">Start Cranberri</cb-code>.<br><cb-warn>!</cb-warn> Achtung: Es dauert kurz, bis Cranberri startet. Versuche nicht, mehrfach zu klicken.</li>
+  <li>Doppelklicke auf die Verknüpfung <cb-code color="blue">Start Cranberri</cb-code>.<br><div class="cb-warn">!</div> Achtung: Es dauert kurz, bis Cranberri startet. Versuche nicht, mehrfach zu klicken.</li>
   <li>Wähle links die Welt aus, die du starten möchtest, oder klicke auf "+ New World".</li>
   <li>Klicke oben auf “Start Server”, um Cranberri zu starten. Das Konsolenfenster, das sich öffnet, ist dein Server, schließe es nicht.</li>
   <li>Du kannst Welten außerdem benennen, indem du sie auswählst und auf "Rename" klickst, danach "Confirm".</li>
 </ol>
 
 
-<cb-chapter [ordinal]="3">Minecraft starten</cb-chapter>
+<cb-chapter ordinal="3">Minecraft starten</cb-chapter>
 
 <ol>
-  <li>Doppelklicke auf die Verknüpfung <cb-code color="blue">Start Minecraft</cb-code>.<br><cb-warn>!</cb-warn> Achtung: Es dauert kurz, bis Minecraft startet. Versuche nicht, mehrfach zu klicken.</li>
+  <li>Doppelklicke auf die Verknüpfung <cb-code color="blue">Start Minecraft</cb-code>.<br><div class="cb-warn">!</div> Achtung: Es dauert kurz, bis Minecraft startet. Versuche nicht, mehrfach zu klicken.</li>
   <li>Klicke, sobald Minecraft sich vollständig geöffnet hat, auf “Mehrspieler” und doppelklicke dann auf “Cranberri”, um die Welt zu öffnen.</li>
 </ol>
 
 
-<cb-chapter [ordinal]="4">Projekte erstellen und bearbeiten</cb-chapter>
+<cb-chapter ordinal="4">Projekte erstellen und bearbeiten</cb-chapter>
 
 <ol>
   <li>Klicke, um ein Projekt zu erstellen, im Cranberri GUI neben "Projects" auf "Create". Gib deinem Projekt einen Namen (keine Leerzeichen) und wähle über die Umschaltbuttons "simple" und Java (<!--TODO java icon-->). "Create" zum Abschließen.</li>
-  <li>Doppelklicke auf die Verknüpfung <cb-code color="blue">Start VS Code</cb-code>.<br><cb-warn>!</cb-warn> Achtung: Es dauert kurz, bis VS Code startet. Versuche nicht, mehrfach zu klicken. Sobald VS Code erscheint, kannst du das Konsolenfenster schließen. <cb-muted>Installiere keine Extensions in VS Code.</cb-muted></li>
+  <li>Doppelklicke auf die Verknüpfung <cb-code color="blue">Start VS Code</cb-code>.<br><div class="cb-warn">!</div> Achtung: Es dauert kurz, bis VS Code startet. Versuche nicht, mehrfach zu klicken. Sobald VS Code erscheint, kannst du das Konsolenfenster schließen. <div class="cb-muted">Installiere keine Extensions in VS Code.</div></li>
   <li>Klicke nun links auf den Namen deines Projekts, um den Ordner zu öffnen. Hier findest du den Ordner <cb-code color="blue">scripts</cb-code>, in dem du ein Beispielprogramm <cb-code color="blue">script.java</cb-code> findest. Doppelklicke darauf, um es zu öffnen.</li>
-  <li style="color: grey"><cb-muted>Fahre mit dem nächsten Kapitel fort, wenn dein Programm fertig ist.</cb-muted></li>
+  <li style="color: grey"><div class="cb-muted">Fahre mit dem nächsten Kapitel fort, wenn dein Programm fertig ist.</div></li>
 </ol>
 
 <img src="assets/bundle-guide/abb-projekt-in-vs-code.png">
 
 
-<cb-chapter [ordinal]="5">Cranberri-Computer platzieren und ausführen</cb-chapter>
+<cb-chapter ordinal="5">Cranberri-Computer platzieren und ausführen</cb-chapter>
 
 <p>Es ist vorausgesetzt: Du hast ein Projekt erstellt.</p>
 
