make cranberri logo clickable

--- a/src/app/components/cb-styles.scss
+++ b/src/app/components/cb-styles.scss
@@ -35,6 +35,8 @@ p, li {
   display: flex;
   gap: 15px;
 
+  cursor: pointer;
+
   /*!* quick fix for black box shrinking on smaller screens *!
   width: 161px;*/
 
