--- a/src/app/documents/lehrbogen-evaluation.html
+++ b/src/app/documents/lehrbogen-evaluation.html
@@ -3,11 +3,13 @@
 
 <cb-chapter ordinal="1">Persönliche Daten</cb-chapter>
 
-Name: <div class="cb-handwrite-space"></div>
-<div class="cb-spacer"></div>
-Klasse: <div class="cb-handwrite-space small"></div>
-<div class="cb-spacer"></div>
-IMP: <div class="cb-checkbox"></div>
+<div class="text">
+  Name: <div class="cb-handwrite-space"></div>
+  <div class="cb-spacer"></div>
+  Klasse: <div class="cb-handwrite-space small"></div>
+  <div class="cb-spacer"></div>
+  IMP: <div class="cb-checkbox"></div>
+</div>
 
 
 <cb-chapter ordinal="2">Vorkenntnisse</cb-chapter>
