--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,6 +11,7 @@
 
 <ul>
   <li><a routerLink="bundle-einfuehrung-und-benutzungsanweisung">Cranberri Bundle: Einführung & Benutzungsanweisung</a></li>
+  <li><a routerLink="lehrbogen">Lehrbogen</a></li>
   <li><a routerLink="lehrbogen-evaluation">Lehrbogen: Evaluation</a></li>
 </ul>
 
