--- a/src/app/documents/lehrbogen.html
+++ b/src/app/documents/lehrbogen.html
@@ -3,9 +3,14 @@
 
 <cb-chapter ordinal="1">Vorbereitung</cb-chapter>
 
-<p>
-  <b>Bundle-Nutzer:</b> Befolge die Schritte entsprechend <a routerLink="/bundle-einfuehrung-und-benutzungsanweisung">Cranberri Bundle: Einführung & Benutzungsanweisung</a>, um ein Projekt zu erstellen und VS Code zu öffnen.
-</p>
+<div class="cb-text-box">
+  <p>
+    Für <b>Bundle-Nutzer</b>:
+  </p>
+  <p>
+    Befolge die Schritte entsprechend <a routerLink="/bundle-einfuehrung-und-benutzungsanweisung">Cranberri Bundle: Einführung & Benutzungsanweisung</a>, um ein Projekt zu erstellen und VS Code zu öffnen.
+  </p>
+</div>
 
 <p>
   Erstelle ein neues Projekt und öffne es in VS Code.
