--- a/src/app/components/cb-styles.scss
+++ b/src/app/components/cb-styles.scss
@@ -240,10 +240,40 @@ table.cb-evaluation-table {
 /* class-only */
 .cb-text-box {
   border-radius: 20px;
-  padding: calc(30px - 18px) 30px;
   background: linear-gradient(150deg, transparentize($cb-blue, 0.85) 0%, transparent 40%);
   border-left: 3px solid $cb-blue;
   &.large {
     background: linear-gradient(100deg, transparentize($cb-blue, 0.85) 0%, transparent 40%);
+  }
+
+  padding: 30px;
+  :first-child {
+    margin-top: 0;
+  }
+  :last-child {
+    margin-bottom: 0;
+  }
+}
+
+.cb-badge {
+  display: inline-flex;
+  align-items: center;
+  padding: 10px;
+  gap: 7px;
+
+  background-color: transparentize($cb-blue, 0.7);
+  border-radius: 5px;
+
+  img {
+    height: calc($font-size-text * 1.3);
+    width: initial !important;
+    background-color: white;
+    padding: 5px;
+    border-radius: 5px;
+    box-shadow: transparentize($cb-black, 0.8) 0 0 5px;
+  }
+
+  div {
+    font-weight: 500;
   }
 }
