--- a/src/app/documents/lehrbogen.html
+++ b/src/app/documents/lehrbogen.html
@@ -40,6 +40,13 @@
 
 <cb-chapter ordinal="2">Versuch: Es werde Licht!</cb-chapter>
 
+<div class="cb-text-box">
+  <cb-badge badge="minecraft"></cb-badge>
+  <p>
+    Befolge die Schritte entsprechend <a routerLink="/bundle-einfuehrung-und-benutzungsanweisung">Cranberri Bundle: Einführung & Benutzungsanweisung</a>, um ein Projekt zu erstellen und VS Code zu öffnen.
+  </p>
+</div>
+
 <p>
   <span class="cb-muted">...</span>
 </p>
