--- a/src/app/components/cb-styles.scss
+++ b/src/app/components/cb-styles.scss
@@ -3,6 +3,7 @@ $cb-blue: #2873ff;
 $cb-red: #cc3e3e;
 
 $font-size-title: 24px;
+$font-size-header: 20px;
 $font-size-text: 18px;
 
 * {
@@ -26,6 +27,15 @@ a {
   &:hover {
     color: darken($cb-blue, 20%);
   }
+}
+
+h2 {
+  font-weight: 600;
+  font-size: $font-size-header;
+}
+
+li {
+  padding-left: 3px;
 }
 
 .cb-header {
@@ -133,6 +143,10 @@ a {
 
 img {
   width: 100%;
+  &.small {
+    width: 70%;
+  }
+  border-radius: 20px;
 }
 
 /* class-only */
@@ -246,7 +260,8 @@ table.cb-evaluation-table {
     background: linear-gradient(100deg, transparentize($cb-blue, 0.85) 0%, transparent 40%);
   }
 
-  padding: 30px;
+  padding: 30px 0 30px 30px;
+
   :first-child {
     margin-top: 0;
   }
@@ -275,5 +290,27 @@ table.cb-evaluation-table {
 
   div {
     font-weight: 500;
+  }
+}
+
+.cb-footnote {
+  width: 13px;
+  height: 13px;
+  color: $cb-blue;
+  background-color: transparentize($cb-blue, 0.7);
+  border-radius: 100%;
+  margin-left: 2px;
+  cursor: pointer;
+
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
+  bottom: 3px;
+
+  div {
+    position: relative;
+    top: 3px;
   }
 }
