--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="cb-header">
   <div class="cb-logo">
-    <img src="assets/cb-logo.png">
+    <img src="assets/cb-logo.png" class="img">
     <div>Cranberri Dokumente</div>
   </div>
 </div>
